# cuda-motion

./: .gitignore  CMakeLists.txt  COMMANDS.md  Makefile  README.md  ffmpeg  ffmpeg.cpp  motionDerector  motionDerector.cpp  motionDetector  motionDetector.cpp  vcpkg.json
classes/: deviceManager.cpp  deviceManager.h
cmake/: compiler-flags.cmake  sanitizers.cmake  setup-tensor-rt.cmake
configs/: camera-server.json  camera-server.jsonc  cuda-motion.jsonc
etc/: build-notes.md  cheat-sheet.md  gmon.rpt  mermaid.js.diagram  native-video-writer.cpp  profiling.md  shm-reader.c
etc/zmq-consumer/: frame_msg_pb2.py  zmq-consumer.py
helper/: Makefile  build-notes.md  opencv.py  profiling.md  test-video-writer.cpp  useful-commands.md
misc/: helper.py  shm-reader.c  useful-commands.md
src/: main.cpp  motionDetector  motionDetector.cpp
src/camera-server/: CMakeLists.txt  deviceManager.cpp  deviceManager.h  device_manager.cpp  device_manager.h  eventLoop.h  event_loop.h  frame_handler.cpp  frame_handler.h  global_vars.cpp  global_vars.h  ipc.cpp  ipc.h  logger.cpp  logger.h  main.cpp  motionDetector.cpp  motionDetector.h  pc_queue.h  pc_queue_ipc.cpp  pc_queue_vw.cpp  utils.cpp  utils.h
src/camera-server/http_service/: AppComponent.hpp  CMakeLists.txt  app_component.hpp  auth_handler.cpp  auth_handler.h  error_handler.cpp  error_handler.hpp  oatpp_entry.cpp  oatpp_entry.h
src/camera-server/http_service/controller/: StaticController.hpp  static_controller.hpp
src/camera-server/readerwriterqueue/: readerwritercircularbuffer.h
src/classes/: deviceManager.cpp  deviceManager.h  logger.cpp  logger.h  motionDetector.cpp  motionDetector.h
src/cuda-motion/: CMakeLists.txt  device_manager.cpp  device_manager.h  frame_handler.cpp  frame_handler.h  global_vars.h  ipc.cpp  ipc.h  main.cpp  pc_queue.h  pc_queue_ipc.cpp  pc_queue_vw.cpp  percentile_tracker.h  pipeline_executor.h  utils.cpp  utils.h
src/cuda-motion/asynchronous_processing_units/: http_service.h  matrix_notifier.cpp  object_detector.h  video_writer.h  zeromq_publisher.h
src/cuda-motion/entities/: processing_context.h  processing_metadata.h  processing_units_variant.h  synchronous_processing_result.h  video_recording_state.h
src/cuda-motion/http_service/: CMakeLists.txt  app_component.hpp  auth_handler.h  error_handler.hpp
src/cuda-motion/interfaces/: i_asynchronous_processing_unit.h  i_synchronous_processing_unit.h
src/cuda-motion/proto/: frame_msg.proto
src/cuda-motion/synchronous_processing_units/: calculate_change_rate.h  calculate_fps.h  control_fps.h  crop_frame.h  debug.h  debug_oputput.cpp  detect_objects.cpp  overlay_bounding_boxes.cpp  overlay_info.h  resize_frame.h  rotate_frame.cpp  rotate_frame.h
src/cuda-motion/utils/: CMakeLists.txt  matrix_sender.cpp  matrix_sender.h  nvjpeg_encoder.cpp  nvjpeg_encoder.h  ram_video_buffer.cpp  ram_video_buffer.h
src/matrix-pipeline/: CMakeLists.txt  device_manager.cpp  device_manager.h  global_vars.cpp  global_vars.h  main.cpp  pipeline_executor.h  utils.cpp  utils.h  video_feed_manager.cpp  video_feed_manager.h
src/matrix-pipeline/asynchronous_processing_units/: CMakeLists.txt  asynchronous_processing_unit.cpp  asynchronous_processing_unit.h  ffmpeg_streamer.cpp  ffmpeg_streamer.h  http_service.h  matrix_notifier.cpp  matrix_notifier.h  pipe_writer.cpp  pipe_writer.h  rtsp_producer.cpp  rtsp_producer.h  video_writer.cpp  video_writer.h  zeromq_publisher.h
src/matrix-pipeline/entities/: processing_context.h  processing_units_variant.h  synchronous_processing_result.h  video_recording_state.h
src/matrix-pipeline/interfaces/: i_asynchronous_processing_unit.h  i_processing_unit.h  i_synchronous_processing_unit.h
src/matrix-pipeline/synchronous_processing_units/: CMakeLists.txt  annotate_bounding_boxes.cpp  annotate_bounding_boxes.h  auto_zoom.cpp  auto_zoom.h  calculate_change_rate.h  collect_stats.cpp  collect_stats.h  control_fps.h  crop_frame.h  debug_oputput.cpp  debug_output.cpp  debug_output.h  detect_objects.cpp  detect_objects.h  measure_latency.cpp  measure_latency.h  overlay_bounding_boxes.cpp  overlay_bounding_boxes.h  overlay_info.cpp  overlay_info.h  overlay_text.cpp  overlay_text.h  pipeline_executor.cpp  pipeline_executor.h  prune_object_detection_results.cpp  prune_object_detection_results.h  resize.cpp  resize_frame.cpp  resize_frame.h  rotate_and_flip.cpp  rotate_and_flip.h  rotate_frame.cpp  rotate_frame.h  sface_detect.cpp  sface_detect.h  sface_overlay.cpp  sface_overlay.h  sface_overlay_bounding_boxes.cpp  sface_overlay_bounding_boxes.h  (+14 more)
src/matrix-pipeline/utils/: CMakeLists.txt  cuda_helper.cpp  cuda_helper.h  matrix_sender.cpp  matrix_sender.h  misc.cpp  misc.h  nvjpeg_encoder.cpp  nvjpeg_encoder.h  ram_video_buffer.cpp  ram_video_buffer.h  trt_logger.cpp  trt_logger.h
src/tools/rtsp/: CMakeLists.txt  rtsp.cpp
src/tools/yolo-transfer-learning/: main.py
src/tools/yunet/: CMakeLists.txt  yunet_demo.cpp
src/tools/yunet_leak_test/: CMakeLists.txt  yunet_leak_test.cpp
